# alphalablight_assessment

./: .gitignore  README.md  pyproject.toml  requirements.txt  solution-cli  solution-cli.bat
alphalablite/: api.py  cli.py  config.py  data_sources.py  engine.py  exceptions.py  models.py  parser.py  repository.py  serialization.py  service.py  transformations.py
scripts/: sample_momentum.txt
tests/: test_api.py  test_cli_e2e.py  test_engine_repository.py  test_parser.py  test_transformations.py
